--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <hr>Hi Git</hr>
-    <h1>modify</h1>
+    <header>
+        header
+    </header>
 </body>
 </html>
